--- a/mywebsite/index.html
+++ b/mywebsite/index.html
@@ -46,10 +46,23 @@
             
           </div>
           <div class="left-column">
-            Left column
+            <img id="profile-pic" src="Images/Ewa .jpg">
+            <h5 style="text-align: center;line-height: 0;">Personalize Theme</h5>
+            
+            <div class="theme-options-wrapper">
+              <div id="light-mode" class="theme-dot"></div>
+              <div id="blue-mode" class="theme-dot"></div>
+              <div id="green-mode" class="theme-dot"></div>
+              <div id="purple-mode" class="theme-dot"></div>
+            </div>
+
+            <p id="settings-note">*Theme sttings will be saved for<br>your next visit</p>
           </div>
           <div class="right-column">
-            Right column
+            <div id="preview">
+              <h3>What I do</h3>
+              <p>I am an environmental toxicologist working with biomarker production and programming in my spare time.</p>
+            </div>
           </div>
 
         </div>
