--- a/mywebsite/index.html
+++ b/mywebsite/index.html
@@ -44,7 +44,7 @@
           </div>
 
           <div class="left-column">
-            <img id="profile-pic" src="Images/Ewa.jpg" />
+            <img id="profile-pic" src="Images/Ewa .jpg" />
             <h5 style="text-align: center; line-height: 0">
               Personalize Theme
             </h5>
@@ -183,7 +183,26 @@
     </section>
 
     <section class="s2">
-      <div class="main-container">Contact</div>
+      <div class="main-container">
+        <h3 style="text-align: center;">Get in touch</h3>
+
+        <form id="contact-form">
+          <label>Name</label>
+          <input class="input-field" type="text" value="name">
+
+          <label>Subject</label>
+          <input class="input-field" type="text" value="subject">
+
+          <label>Email</label>
+          <input class="input-field" type="text" value="email">
+
+          <label>Message</label>
+          <textarea class="input-field" name="message"></textarea>
+
+          <input id="submit-btn" type="submit" value="Send">
+        </form>
+
+      </div>
     </section>
     
   </body>
